--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,7 @@
         "no-plusplus": "off",
         "class-methods-use-this": "off",
         "object-curly-newline": "off",
-        "no-nested-ternary": "off"
+        "no-nested-ternary": "off",
+        "max-len": ["error", { "code": 150 }]
     }
 }
